# eve

./: .gitignore  .impeccable.md  CHANGELOG.md  CHANGELOG.zh.md  README.md  README.zh.md  main.py  package.json  pyproject.toml  record_mic_24h.py  tsconfig.base.json
.github/workflows/: build-installers.yml  desktop-release.yml
apps/desktop/: electron-builder.yml  electron.vite.config.ts  package.json  playwright.config.ts  tsconfig.json  tsconfig.node.json  tsconfig.node.tsbuildinfo  tsconfig.web.json  tsconfig.web.tsbuildinfo
apps/desktop/e2e/: app.spec.ts  fixtures.ts
apps/desktop/resources/: icon.icns
apps/desktop/scripts/: macos-sign.cjs  prepare-shared-python-runtime.mjs  prepare-sherpa-runtime.mjs  setup-ffmpeg.mjs
apps/desktop/src/main/: audio-utils.ts  cli-parser.test.ts  cli-parser.ts  command-server.ts  declarations.d.ts  desktop-engine.test.ts  desktop-engine.ts  env.d.ts  ffmpeg-binary.ts  index.ts  logging.ts  model-manager.ts  permissions.ts  recording-history.ts  sidecar-manager.ts  sidecar-runtime.ts  store.test.ts  store.ts  test-engine.ts  tray.ts  updater.ts  window.ts
apps/desktop/src/preload/: index.d.ts  index.ts
apps/desktop/test-results/: .last-run.json
docs/: cli.md  cli.zh.md  development.md  development.zh.md
packaging/entrypoints/: eve_cli.py
scripts/: build_installers.py  installer_support.py  patch-isbinaryfile.mjs
src/eve/: cli.py  desktop_app.py  record_eve_24h.py  transcribe_recordings.py
src/eve/asr/: qwen.py
src/eve/recorders/: live_vad_recorder.py
src/eve/utils/: console_ui.py  logging_utils.py
(+27 files in other folders)
