[project]
name = "eve"
version = "0.5.4"
description = "Python recording and transcription core for the eve desktop sidecar."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "numpy>=2.0.0",
  "qwen-asr",
  "rich",
  "silero-vad",
  "soundfile",
  "sounddevice",
  "platformdirs>=4.5.1",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
namespaces = true
